# RecursiveNeon

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_REPORT.md  README.md  REFACTORING_PROGRESS.md  TEST_MOCK_FIXES.md  test_filesystem_manual.py
.github/workflows/: ci.yml
backend/: .coveragerc  .gitignore  FILESYSTEM_SECURITY.md  config.py  dependencies.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/initial_fs/: welcome.txt
backend/initial_fs/Pictures/: about.txt
backend/models/: __init__.py  game_state.py
backend/services/: __init__.py  app_service.py  interfaces.py  message_handler.py  npc_manager.py  ollama_client.py  process_manager.py
backend/src/recursive_neon/: __init__.py  config.py  dependencies.py  main.py  terminal.py
backend/src/recursive_neon/editor/: __init__.py  ansi_parser.py  buffer.py  commands.py  config_loader.py  default_commands.py  editor.py  faces.py  game_bridge.py  keymap.py  killring.py  mark.py  minibuffer.py  modes.py  shell_mode.py  text_attr.py  undo.py  variables.py  view.py  viewport.py  window.py
backend/src/recursive_neon/editor/modes/: __init__.py  markdown_mode.py  python_mode.py  sh_mode.py
backend/src/recursive_neon/initial_fs/Documents/: TUTORIAL.txt  my test file.txt  readme.txt  sample.txt
backend/src/recursive_neon/initial_fs/Projects/: my-first-project.txt
backend/src/recursive_neon/models/: __init__.py  app_models.py  calendar.py  game_state.py  notification.py  npc.py  process.py
backend/src/recursive_neon/npcs/: __init__.py
backend/src/recursive_neon/services/: __init__.py  app_service.py  browser_service.py  calendar_service.py  filesystem_service.py  game_event_bus.py  interfaces.py  media_viewer_service.py  message_handler.py  notes_service.py  notification_service.py  npc_manager.py  ollama_client.py  process_manager.py  settings_service.py  task_service.py  time_service.py
backend/src/recursive_neon/shell/: __init__.py  __main__.py  builtins.py  completion.py  glob.py  keys.py  output.py  parser.py  path_resolver.py  session.py  shell.py
backend/src/recursive_neon/shell/programs/: __init__.py  chat.py  codebreaker.py  edit.py  filesystem.py  fsbrowse.py  memdump.py  notes.py  portscan.py  sysmon.py  tasks.py  utility.py
backend/src/recursive_neon/shell/tui/: __init__.py  runner.py
backend/src/recursive_neon/wsclient/: __init__.py  __main__.py  client.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  conftest.py  test_full_flows.py  test_lifespan.py  test_ollama_client.py  test_process_manager.py  test_time_sync.py
backend/tests/unit/: __init__.py  test_app_models.py  test_app_service.py  test_calendar_message_handler.py  test_calendar_service.py  test_filesystem_name_uniqueness.py  test_filesystem_security.py  test_main.py  test_message_handler.py  test_notification_service.py  test_npc_manager.py  test_ollama_client.py  test_process_table.py  test_settings_service.py  test_terminal.py  test_time_service.py
backend/tests/unit/editor/: harness.py  test_ansi_parser.py  test_async_bridge.py  test_buffer.py  test_buffer_attrs.py  test_buffer_keymap.py  test_commands.py  test_config_loader.py  test_editor_game_bridge.py  test_editor_npc_events.py  test_editor_save_events.py  test_escape_meta.py  test_faces.py  test_fill.py  test_game_event_bus.py  test_harness.py  test_help.py  test_isearch.py  test_isearch_v2.py  test_issue_52_tui_in_shell.py  test_keyboard_quit.py  test_keymap.py  test_killring.py  test_mark.py  test_mark_set.py  test_minibuffer.py  test_modes.py  test_phase6f.py  test_query_replace.py  test_read_only_regions.py  test_replace.py  test_scroll.py  test_sentence.py  test_shell_buffer_interactive.py  test_shell_mode.py  test_syntax_markdown.py  test_syntax_python.py  test_syntax_sh.py  test_text_attr.py  test_tui_passthrough.py  (+9 more)
backend/tests/unit/shell/: conftest.py  test_builtins.py  test_chat_program.py  test_codebreaker.py  test_completion.py  test_context_completion.py  test_edit_save_callback.py  test_filesystem_enhanced.py  test_fsbrowse.py  test_glob.py  test_memdump.py  test_note_program.py  test_parser.py  test_path_resolver.py  test_pipeline.py  test_portscan.py  test_programs.py  test_shell_integration.py  test_sysmon.py  test_task_program.py  test_tui.py  test_tui_resize.py  test_wsclient_batch.py
design-documents/: chat-01.md  chat-02.md
docs/: ARCHITECTURE.md  BACKEND_CONVENTIONS.md  CALENDAR_DESIGN.md  CALENDAR_IMPLEMENTATION.md  CALENDAR_REQUIREMENTS.md  CODE_QUALITY_REVIEW.md  GAME_EVENTS.md  NOTIFICATION_SYSTEM_DESIGN.md  NOTIFICATION_SYSTEM_GUIDE.md  NOTIFICATION_SYSTEM_REQUIREMENTS.md  PHASE_7A_DESIGN.md  QUICKSTART.md  REVIEW_FIXES_PHASE7F.md  SHELL_DESIGN.md  TECH_DEBT.md  V2_HANDOVER-archive.md  V2_HANDOVER.md  settings-app-design.md  settings-app-requirements.md  technical-debt.md  terminal-api-guide.md  terminal-design.md  terminal-requirements.md  time-system-design.md  time-system-requirements.md
docs/minigames/: OVERVIEW.md  circuitbreaker-design.md  circuitbreaker-requirements.md  codebreaker-design.md  codebreaker-requirements.md  memorydump-design.md  memorydump-requirements.md  portscanner-design.md  portscanner-requirements.md
frontend/: .prettierignore  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/: AnalogClock.css  AnalogClock.tsx  ClockWidget.css  ClockWidget.tsx  Desktop.tsx  Dialog.tsx  DigitalClock.css  DigitalClock.tsx  ErrorBoundary.tsx  FileSelectionDialog.tsx  Taskbar.tsx  Window.tsx
frontend/src/contexts/: AppProviders.tsx  GameStoreContext.tsx  (+1 more)
npc-llm-system/: CONDA_BUNDLING_ANSWER.md  DISTRIBUTION_SUMMARY.md  FILE_INDEX.md  PORTABLE_CONDA_GUIDE.md  QUICKSTART.md  WINDOWS_BUILD_GUIDE.md  build_windows.bat  build_windows_portable.bat  environment.yml  langchain_server_adapter.py  llm_controller_server.py  portable_conda_manager.py
scripts/: download_ollama.py  setup.bat  setup.sh
(+98 files in other folders)
