[project]
name = "recursive-neon"
version = "0.1.0"
description = "FastAPI backend for Recursive://Neon RPG - A futuristic game powered by LLM-driven NPCs"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Recursive://Neon Team"}
]
keywords = ["llm", "npc", "game", "fastapi", "langchain", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "websockets==14.1",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",

    # LLM & AI
    "langchain==0.3.13",
    "langchain-community==0.3.13",
    "langgraph==0.2.59",
    "langchain-ollama==0.2.2",

    # Vector Database
    "chromadb==0.5.23",

    # HTTP Client (for ollama)
    "httpx==0.28.1",

    # System Utilities
    "psutil==6.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "pytest-httpx==0.35.0",
    # Linting & Formatting
    "ruff>=0.8.0",
    # Type Checking
    "mypy>=1.13.0",
]

[project.scripts]
run-recursive-neon-backend = "recursive_neon.main:main"

[project.urls]
Homepage = "https://github.com/hoelzl/RecursiveNeon"
Repository = "https://github.com/hoelzl/RecursiveNeon"
Issues = "https://github.com/hoelzl/RecursiveNeon/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recursive_neon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=recursive_neon",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src/recursive_neon"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "pytest-httpx==0.35.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# ============================================================================
# Ruff Configuration (Linting & Formatting)
# ============================================================================

[tool.ruff]
# Target Python version
target-version = "py311"

# Line length to match Black's default
line-length = 88

# Include src directory
src = ["src"]

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "S101",    # Use of assert (needed for tests)
    "PLR0913", # Too many arguments (common in DI)
    "PLR2004", # Magic value comparison
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can use assert, magic values, etc.
"tests/**/*.py" = ["S101", "PLR2004", "ARG001", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["recursive_neon"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

# ============================================================================
# Mypy Configuration (Type Checking)
# ============================================================================

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["recursive_neon"]

# Strictness settings (gradual adoption)
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false  # Enable gradually
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true

# Error output
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
    "langchain_ollama.*",
    "langgraph.*",
    "chromadb.*",
    "psutil.*",
]
ignore_missing_imports = true
