[project]
name = "recursive-neon"
version = "0.1.0"
description = "FastAPI backend for Recursive://Neon RPG - A futuristic game powered by LLM-driven NPCs"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Recursive://Neon Team"}
]
keywords = ["llm", "npc", "game", "fastapi", "langchain", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "websockets==14.1",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",

    # LLM & AI
    "langchain==0.3.13",
    "langchain-community==0.3.13",
    "langgraph==0.2.59",
    "langchain-ollama==0.2.2",

    # Vector Database
    "chromadb==0.5.23",

    # HTTP Client (for ollama)
    "httpx==0.28.1",

    # System Utilities
    "psutil==6.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
]

[project.scripts]
run-recursive-neon-backend = "recursive_neon.main:main"

[project.urls]
Homepage = "https://github.com/hoelzl/RecursiveNeon"
Repository = "https://github.com/hoelzl/RecursiveNeon"
Issues = "https://github.com/hoelzl/RecursiveNeon/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recursive_neon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=recursive_neon",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src/recursive_neon"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
]
