[project]
name = "recursive-neon"
version = "0.1.0"
description = "FastAPI backend for Recursive://Neon RPG - A futuristic game powered by LLM-driven NPCs"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Recursive://Neon Team"}
]
keywords = ["llm", "npc", "game", "fastapi", "langchain", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # Core Framework
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",

    # LLM & AI
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.3",
    "langchain-ollama>=1.0.1",

    # Vector Database
    "chromadb>=1.5.5",

    # HTTP Client (for ollama)
    "httpx>=0.28.1",

    # System Utilities
    "psutil>=7.2.2",

    # CLI Shell
    "prompt_toolkit>=3.0.50",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
    # Code quality
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    # Type stubs
    "types-psutil",
]

[project.scripts]
run-recursive-neon-backend = "recursive_neon.main:main"

[project.urls]
Homepage = "https://github.com/hoelzl/RecursiveNeon"
Repository = "https://github.com/hoelzl/RecursiveNeon"
Issues = "https://github.com/hoelzl/RecursiveNeon/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recursive_neon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=recursive_neon",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "slow: Slow tests (may take longer to run)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:Core Pydantic V1 functionality:UserWarning",
]
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "venv"]

[tool.coverage.run]
source = ["src/recursive_neon"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "types-psutil",
]

# ── Ruff (linter + formatter) ───────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]
ignore = [
    "UP006",  # Use `list` instead of `List` — defer, codebase uses typing consistently
    "UP007",  # Use `X | None` instead of `Optional[X]` — defer, same reason
    "UP035",  # Deprecated typing imports — defer, same reason as UP006/UP007
    "E501",   # Line too long — let formatter handle
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B011",   # Do not assert False
    "SIM300", # Yoda conditions in tests are fine
]
"src/recursive_neon/main.py" = [
    "B008",   # Depends() in defaults is standard FastAPI pattern
    "E402",   # warnings.filterwarnings must run before langchain imports (TD-001)
]
"src/recursive_neon/shell/__main__.py" = [
    "E402",   # warnings.filterwarnings must run before langchain imports (TD-001)
]

[tool.ruff.lint.isort]
known-first-party = ["recursive_neon"]

[tool.ruff.format]
docstring-code-format = true

# ── Mypy (type checker) ─────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["recursive_neon"]
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_classic.*",
    "langchain_core.*",
    "langchain_ollama.*",
    "langchain_community.*",
    "langgraph.*",
    "chromadb.*",
    "httpx.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
